feat: add functionality to add custom Stremio addons via URL

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1342,3 +1342,11 @@ msgstr ""
 msgctxt "#30893"
 msgid "Stremio Subtitle Configuration"
 msgstr ""
+
+msgctxt "#90001"
+msgid "Add Custom Addon"
+msgstr "Add Custom Addon"
+
+msgctxt "#90002"
+msgid "Add a custom Stremio addon by entering its URL"
+msgstr "Add a custom Stremio addon by entering its URL"
