--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1260,7 +1260,7 @@ msgid "Enable or disable Stremio add-ons."
 msgstr "Habilitar o deshabilitar los complementos de Stremio."
 
 msgctxt "#30873"
-msgid "Prioritize results in the selected language"
+msgid "Select language for player subtitle selection"
 msgstr ""
 
 msgctxt "#30874"
@@ -1349,4 +1349,16 @@ msgstr "Add Custom Addon"
 
 msgctxt "#90002"
 msgid "Add a custom Stremio addon by entering its URL"
-msgstr "Add a custom Stremio addon by entering its URL"
+msgstr "Agrega un complemento personalizado de Stremio ingresando su URL"
+
+msgctxt "#90003"
+msgid "Auto-select audio when playing"
+msgstr ""
+
+msgctxt "#90004"
+msgid "Audio Language"
+msgstr ""
+
+msgctxt "#90005"
+msgid "Select audio language for playing the video"
+msgstr ""
