feat(settings): make thread pool size configurable
- Add `thread_number` setting with slider in settings.xml under 'Others'

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1561,4 +1561,13 @@ msgctxt "#90051"
 msgid "Search Similar"
 msgstr ""
 
+msgctxt "#90052"
+msgid "Thread Number"
+msgstr ""
+
+msgctxt "#90053"
+msgid "Select the number of threads (1-30)"
+msgstr ""
+
+
 
