--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -1552,3 +1552,15 @@ msgstr "Numero de hilos"
 msgctxt "#90053"
 msgid "Select the number of threads (1-30)"
 msgstr "Selecciona el numero de hilos (1-30)"
+
+msgctxt "#90054"
+msgid "Kodi logs"
+msgstr "Registros de Kodi"
+
+msgctxt "#90055"
+msgid "Kodi old logs"
+msgstr "Registro antiguos de Kodi"
+
+msgctxt "#90056"
+msgid "Displays Kodi logs to help diagnose issues."
+msgstr "Muestra los registros de Kodi para ayudar a diagnosticar problemas"
