--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -231,6 +231,10 @@ msgctxt "#30244"
 msgid "Cache cleared"
 msgstr ""
 
+msgctxt #30249"
+msgid "Addon Jacktook Burst not found - (script.jacktook.burst)"
+msgstr ""
+
 msgctxt "#30250"
 msgid "Addon Torrest not found - (plugin.video.torrest)"
 msgstr ""
@@ -249,15 +253,19 @@ msgstr ""
 
 msgctxt "#30254"
 msgid "Do you want to install Elementum?"
-msgstr "Do you want to install Elementum?"
+msgstr ""
 
 msgctxt "#30255"
 msgid "Do you want to install Jacktorr?"
-msgstr "Do you want to install Jacktorr?"
+msgstr ""
 
 msgctxt "#30256"
 msgid "Do you want to install Torrest?"
-msgstr "Do you want to install Torrest?"
+msgstr ""
+
+msgctxt "#30257"
+msgid "Do you want to install Jacktook Burst?"
+msgstr ""
 
 msgctxt "#30650"
 msgid "Queued"
@@ -1550,15 +1558,15 @@ msgstr ""
 # Context menus
 
 msgctxt "#90049"
-msgid "Scrape Again"
+msgid "Scrape again"
 msgstr ""
 
 msgctxt "#90050"
-msgid "Search Recommendations"
+msgid "Search recommendations"
 msgstr ""
 
 msgctxt "#90051"
-msgid "Search Similar"
+msgid "Search similar"
 msgstr ""
 
 msgctxt "#90052"
