--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -1440,84 +1440,84 @@ msgid "Support Jacktook"
 msgstr "Apoya a Jacktook"
 
 msgctxt "#90024"
-msgid "Tmdb - Trending"
-msgstr "Tmdb - Tendencias"
+msgid "Trending"
+msgstr "Tendencias"
 
 msgctxt "#90025"
-msgid "Tmdb - Genres"
-msgstr "Tmdb - Géneros"
+msgid "Genres"
+msgstr "Géneros"
 
 msgctxt "#90026"
-msgid "Tmdb - Calendar"
-msgstr "Tmdb - Calendario"
+msgid "Calendar"
+msgstr "Calendario"
 
 msgctxt "#90027"
-msgid "Tmdb - Years"
-msgstr "Tmdb - Años"
+msgid "Years"
+msgstr "Años"
 
 msgctxt "#90028"
-msgid "Trakt - Trending"
-msgstr "Trakt - Tendencias"
+msgid "Trending"
+msgstr "Tendencias"
 
 msgctxt "#90029"
-msgid "Trakt - Most Watched"
-msgstr "Trakt - Más vistos"
+msgid "Most Watched"
+msgstr "Más vistos"
 
 msgctxt "#90030"
-msgid "Trakt - Most Favorited"
-msgstr "Trakt - Más favoritos"
+msgid "Most Favorited"
+msgstr "Más favoritos"
 
 msgctxt "#90031"
-msgid "Trakt - Popular Lists"
-msgstr "Trakt - Listas populares"
+msgid "Popular Lists"
+msgstr "Listas populares"
 
 msgctxt "#90032"
-msgid "Trakt - Trending Lists"
-msgstr "Trakt - Listas en tendencia"
+msgid "Trending Lists"
+msgstr "Listas en tendencia"
 
 msgctxt "#90033"
-msgid "Trakt - Recomendations"
-msgstr "Trakt - Recomendaciones"
+msgid "Recomendations"
+msgstr "Recomendaciones"
 
 msgctxt "#90034"
-msgid "Trakt - Watched History"
-msgstr "Trakt - Historial de vistos"
+msgid "Watched History"
+msgstr "Historial de vistos"
 
 msgctxt "#90035"
-msgid "Trakt - Watchlist"
-msgstr "Trakt - Lista para ver"
+msgid "Watchlist"
+msgstr "Lista para ver"
 
 msgctxt "#90036"
-msgid "Trakt - Top 10 BoxOffice"
-msgstr "Trakt - Top 10 en taquilla"
+msgid "Top 10 BoxOffice"
+msgstr "Top 10 en taquilla"
 
 msgctxt "#90037"
-msgid "Anime Popular"
-msgstr "Anime Popular"
+msgid "Popular"
+msgstr "Popular"
 
 msgctxt "#90038"
-msgid "Anime Popular Recent"
-msgstr "Anime Popular Reciente"
+msgid "Popular Recent"
+msgstr "Popular Reciente"
 
 msgctxt "#90039"
-msgid "Anime Airing"
-msgstr "Anime en Emisión"
+msgid "Airing"
+msgstr "En Emisión"
 
 msgctxt "#90040"
-msgid "Anime Years"
-msgstr "Años de Anime"
+msgid "Years"
+msgstr "Años"
 
 msgctxt "#90041"
-msgid "Anime Genres"
-msgstr "Géneros de Anime"
+msgid "Genres"
+msgstr "Géneros"
 
 msgctxt "#90042"
-msgid "Trakt - Anime Trending"
-msgstr "Trakt - Anime en Tendencia"
+msgid "Trending"
+msgstr "Tendencia"
 
 msgctxt "#90043"
-msgid "Trakt - Anime Most Watched"
-msgstr "Trakt - Anime Más Visto"
+msgid "Most Watched"
+msgstr "Más Visto"
 
 msgctxt "#90044"
 msgid "Torrentio Settings"
@@ -1600,3 +1600,23 @@ msgstr "Habilitar búsqueda en caché"
 msgctxt "#90063"
 msgid "Only show cached streams from external services"
 msgstr "Mostrar solo streams en caché de servicios externos"
+
+msgctxt "#90064"
+msgid "Popular"
+msgstr "Popular"
+
+msgctxt "#90065"
+msgid "Languages"
+msgstr "Idiomas"
+
+msgctxt "#90066"
+msgid "Networks"
+msgstr "Cadenas"
+
+msgctxt "#90067"
+msgid "Collections"
+msgstr "Colecciones"
+
+msgctxt "#90068"
+msgid "Search for collections:"
+msgstr "Buscar colecciones"
