--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -1252,8 +1252,8 @@ msgid "Enable Stremio add-ons integration."
 msgstr "Habilita la integración de complementos de Stremio."
 
 msgctxt "#30870"
-msgid "Toggle Add-ons"
-msgstr "Activar/desactivar complementos"
+msgid "Select Addons"
+msgstr "Seleccionar complementos"
 
 msgctxt "#30871"
 msgid "Log In to Stremio"
@@ -1272,8 +1272,8 @@ msgid "Update Addons"
 msgstr "Actualizar Addons"
 
 msgctxt "#30875"
-msgid "Toggle Catalogs Add-ons"
-msgstr "Activar/desactivar complementos de catalogos"
+msgid "Select Catalogs Addons"
+msgstr "Seleccionar complementos de catalogos"
 
 msgctxt "#30876"
 msgid "Download directory"
@@ -1636,3 +1636,23 @@ msgstr "Ultimos Videos"
 msgctxt "#90072"
 msgid "Trakt Lists"
 msgstr "Listas de Trakt"
+
+msgctxt "#90073"
+msgid "MDbList"
+msgstr "MDbList"
+
+msgctxt "#90074"
+msgid "Top Lists"
+msgstr "Listas Top"
+
+msgctxt "#90075"
+msgid "User Lists"
+msgstr "Listas de Usuario"
+
+msgctxt "#90076"
+msgid "Search Lists"
+msgstr "Buscar Listas"
+
+msgctxt "#90077"
+msgid "Configuracion de MDbList"
+msgstr ""
